style(XOSquare): reduce border width from 3px to 2px to prevent layout shift during swap power-up selection

--- a/src/components/XOGame/XOBoard/XOSquare/XOSquare.module.scss
+++ b/src/components/XOGame/XOBoard/XOSquare/XOSquare.module.scss
@@ -158,7 +158,7 @@
 }
 
 .square.select {
-  border: 3px dashed #ffd93d;
+  border: 2px dashed #ffd93d;
   color: #ffd93d;
   background: #504d38;
   box-shadow: 0 0 10px rgba(255, 217, 61, .5);
